--- a/clientFolder/force-app/main/default/layouts/Contact-Contact %28Support%29 Layout.layout-meta.xml
+++ b/clientFolder/force-app/main/default/layouts/Contact-Contact %28Support%29 Layout.layout-meta.xml
@@ -37,6 +37,10 @@
                 <behavior>Edit</behavior>
                 <field>Level__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Corresponding_User__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
