--- a/clientFolder/force-app/main/default/layouts/Contact-Contact Layout.layout-meta.xml
+++ b/clientFolder/force-app/main/default/layouts/Contact-Contact Layout.layout-meta.xml
@@ -41,6 +41,10 @@
                 <behavior>Edit</behavior>
                 <field>LeadSource</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Corresponding_User__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
