--- a/clientFolder/force-app/main/default/aura/PricebookEntry/PricebookEntry.css
+++ b/clientFolder/force-app/main/default/aura/PricebookEntry/PricebookEntry.css
@@ -1,11 +1,19 @@
-.THIS.h1 {
-    background-color:rgba(0, 0, 0, 0) !important;
-    text-align:center !important;
-    font-size:3.5rem !important;
-    font-weight:bold !important;
-    color: black !important;
-    filter: drop-shadow(0 0 0.75rem black) !important;
+.THIS {
+    border: 10px;
+    padding: 2em;
+    margin: 10px;
+    background-color: #B0E0E6;
+    border-top: solid orange 3px;
+    border-radius: 0px 0px 10px 10px;
+    
 }
+
+.THIS h1 {
+    font-size:30px;
+    font-weight:bold;
+    text-align:center;
+}
+
 .THIS.bPageBlock {
     background: #B0E0E6 !important;
     background-color:rgba(0, 0, 0, 0) !important;
@@ -44,4 +52,21 @@
     background-attachment : scroll !important;
     background-repeat : no-repeat !important;
     overflow :hidden !important;
+}
+
+.THIS.div1 {
+  background-image: url(https://tesla-cdn.thron.com/delivery/public/image/tesla/da705069-91b5-41cb-86f3-86a585c6fdf3/bvlatuR/std/2880x1800/MX-Hero-Desktop.jpg) !important;
+  background-position: 50% 50% !important;
+  background-size: auto auto !important;
+  background-attachment: scroll !important;
+  background-repeat: no-repeat !important;
+  
+}
+
+.THIS .div2 {
+  background: #B0E0E6 !important ;
+  border-top: 4px solid #c9c91e !important ;
+  width: 100%;
+  height: 100%;
+  opacity: 0.8 !important;
 }
