--- a/clientFolder/force-app/main/default/aura/AuraAppointment/AuraAppointment.cmp
+++ b/clientFolder/force-app/main/default/aura/AuraAppointment/AuraAppointment.cmp
@@ -5,12 +5,12 @@
   <aura:attribute
     name="leadFields"
     type="String[]"
-    default="[ 'Name', 'Company', 'Phone', 'Email', 'LeadSource', 'ProductInterest__c', 'Description' ]"
+    default="[ 'Name', 'Company', 'Phone', 'Email', 'Appointment_Date_Time__c', 'LeadSource', 'ProductInterest__c', 'Description', ]"
   />
   <aura:attribute
     name="shopFields"
     type="String[]"
-    default="['Name', 'Customer_Name__c', 'Vehicle_Model__c', 'License_Plate__c', 'Color__c', 'Service_Type__c', 'Priority__c', 'Service_Type_Notes__c']"
+    default="['Name', 'Customer_Name__c', 'Appointment_Date_Time__c', 'Vehicle_Model__c', 'License_Plate__c', 'Color__c', 'Service_Type__c', 'Priority__c', 'Service_Type_Notes__c']"
   />
   <aura:attribute name="recordId" type="String" />
   <aura:attribute name="reloadShopForm" type="boolean" default="true" />
