--- a/clientFolder/force-app/main/default/aura/PositionList/PositionList.cmp
+++ b/clientFolder/force-app/main/default/aura/PositionList/PositionList.cmp
@@ -1,10 +1,12 @@
 <aura:component controller="PositionListApexController" implements="force:appHostable,flexipage:availableForAllPageTypes,flexipage:availableForRecordHome,force:hasRecordId,forceCommunity:availableForAllPageTypes,force:lightningQuickAction" access="global" >
 	<!--Data table column attributes-->
     <aura:attribute name="mydata" type="Object"/>
-    <aura:attribute name="mycolumns" type="List"/>    
+    <aura:attribute name="mycolumns" type="List"/>
+
+	<!--Sorting information-->    
     <aura:attribute name="sortDirection" type="String" default="asc" />
     <aura:attribute name="defaultSortDirection" type="String" default="asc" />
-    <aura:attribute name="sortedBy" type="String" />
+    <aura:attribute name="sortedBy" type="String" default="PositionName"/>
     
     <!--page number and query information-->
     <aura:attribute name="offset" type="Integer" default ="0"/>
